@@ -28,6 +28,7 @@ Adding a GenericLiteralChecker, a generic rule that require a regex as property.
 Adding support for multiple line span String in CPD's AbstractTokenizer, this may change, for the better, CPD's Ruby parsing.
 This release adds 'nicehtml', with the plan for the next major release to make nicehtml->html, and html->oldhtml. This feature uses an XSLT transformation, default stylesheet maybe override with '-xslt filename'.
 New CPD command line feature : Using more than on directory for sources. You can now have several '--files' on the command line.
+SingularField greatly improved to generate very few false positives (none?). Moved from controversial to design. Two options added to restore old behaviour (mostly).
 
 July 20, 2007 - 4.0
 Fixed bug 1697397 - fixed false positives in ClassCastExceptionWithToArray
